# WIND

./: Cargo.toml  README.md  build.rs
bench-harness/: .gitignore  README.md
bench-harness/agents/wind-agent/: Cargo.toml
bench-harness/agents/wind-agent/src/: main.rs
bench-harness/bench_harness/: cli.py  metrics.py  proc.py  resources.py  results.py  scenarios.py
crates/rim-bench/: Cargo.toml
crates/rim-bench/src/: main.rs
crates/rim-common/: Cargo.toml
crates/rim-common/src/: lib.rs
crates/rim-pub/: Cargo.toml
crates/rim-pub/src/: main.rs
crates/rim-registry/: Cargo.toml
crates/rim-registry/src/: main.rs
crates/rim-sub/: Cargo.toml
crates/rim-sub/src/: main.rs
crates/wind-bench/: Cargo.toml
crates/wind-bench/src/: latency_bench.rs  load_bench.rs  main.rs  throughput_bench.rs
crates/wind-cli/: Cargo.toml
crates/wind-cli/src/: commands.rs  main.rs
crates/wind-client/: Cargo.toml  README.md
crates/wind-client/src/: client.rs  connection.rs  lib.rs  rpc_client.rs  subscriber.rs
crates/wind-codegen/: Cargo.toml
crates/wind-codegen/src/: idl.rs  lib.rs  rust_generator.rs  schema_parser.rs
crates/wind-core/: Cargo.toml  README.md
crates/wind-core/src/: codec.rs  error.rs  lib.rs  protocol.rs  schema.rs  types.rs
crates/wind-registry/: Cargo.toml  README.md
crates/wind-registry/src/: lib.rs  main.rs  pattern.rs  registry.rs  server.rs
crates/wind-server/: Cargo.toml  README.md
crates/wind-server/src/: lib.rs  publisher.rs  rpc_server.rs  server.rs
docs/: bench_harness.md  benchmark_agents.md  benchmarking.md  dataflow.md
docs/adr/: 0001-transport-and-wire-format.md  0002-service-discovery-registry-and-ttl.md  0003-message-model-and-typed-values.md  0004-pubsub-fanout-and-subscription-modes.md  0005-rpc-dispatch-model.md  0006-client-connection-strategy.md  README.md  adr-template.md
examples/: Cargo.toml  rpc_calculator.rs  temperature_sensor.rs
examples/src/: minimal_pubsub.rs  rpc_calculator.rs  temperature_sensor.rs
tests/: benchmark_test.rs  integration_test.rs
