[workspace]
members = [
    "crates/wind-core",
    "crates/wind-registry", 
    "crates/wind-client",
    "crates/wind-server",
    "crates/wind-codegen",
    "crates/wind-cli",
    "crates/wind-bench",
    "examples"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dashmap = "6.0"
glob = "0.3"
hdrhistogram = "7.5"
rand = "0.8"
async-trait = "0.1"
futures = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
