[package]
name = "rim-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rim-common = { path = "../rim-common" }
hdrhistogram = "7"
rand = "0.8"
clap = { version = "4", features = ["derive"] }
