[package]
name = "wind-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line tools for WIND protocol"

[[bin]]
name = "wind"
path = "src/main.rs"

[dependencies]
wind-core = { path = "../wind-core" }
wind-client = { path = "../wind-client" }
wind-server = { path = "../wind-server" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = "1.0"
