[package]
name = "wind-client"
version = "0.1.0"
edition = "2021"
description = "WIND client library for subscribing to services and making RPC calls"

[dependencies]
wind-core = { path = "../wind-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
