[package]
name = "wind-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
hdrhistogram = "7.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }

wind-core = { path = "../../../crates/wind-core" }
wind-client = { path = "../../../crates/wind-client" }
wind-server = { path = "../../../crates/wind-server" }

[workspace]
